8320971: Fix test